--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/node": "^15.6.1",
     "@vitejs/plugin-vue": "^1.2.3",
     "@vue/compiler-sfc": "^3.0.5",
+    "less": "^4.1.1",
+    "sass": "^1.34.0",
     "typescript": "^4.1.3",
     "vite": "^2.3.5",
     "vue-tsc": "^0.0.24"
