--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "vuex": "^4.0.1"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.23",
     "@types/node": "^15.6.1",
     "@vitejs/plugin-vue": "^1.2.3",
     "@vue/compiler-sfc": "^3.0.5",
+    "@vue/test-utils": "^2.0.0-rc.6",
+    "jest": "^27.0.3",
     "less": "^4.1.1",
     "sass": "^1.34.0",
+    "ts-jest": "^27.0.2",
     "typescript": "^4.1.3",
     "vite": "^2.3.5",
+    "vue-jest": "^5.0.0-alpha.10",
     "vue-tsc": "^0.0.24"
   }
 }
